# iBoW3D

./: CMakeLists.txt  README.md  main.cpp
code-cpp/: CMakeLists.txt  README.md  npy2txt.py  ply2pcd.py  ply_for_pcl.py  task.txt
code-cpp/include/: DataBase.h  FeatureContainer.h  iBoW3D.h
code-cpp/loop_result/KITTI00/: looplist.txt  results.txt
iBoW3D_cpp/: CMakeLists.txt  main.cpp
iBoW3D_cpp/include/: DataBase.h  Data_IO.h  iBoW3D.h
iBoW3D_cpp/src/: DataBase.cpp  Data_IO.cpp  FeatureContainer.cpp  iBoW3D.cpp
include/: FeatureContainer.h  iBoW3D.h
src/: DataBase.cpp  Data_IO.cpp  FeatureContainer.cpp  iBoW3D.cpp
